# DoseCUDA

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
DoseCUDA/: __init__.py  plan.py  plan_impt.py  plan_imrt.py
DoseCUDA/dose_kernels/: BaseClasses.cpp  BaseClasses.h  CMakeLists.txt  CudaClasses.cu  CudaClasses.cuh  ExceptionClasses.h  IMPTClasses.cu  IMPTClasses.cuh  IMRTClasses.cu  IMRTClasses.cuh  MemoryClasses.h  PointClasses.cuh  TextureClasses.cu  TextureClasses.cuh  dosemodule.cpp  dosemodule.cu  dosemodule.h  model_params.h
DoseCUDA/lookuptables/: energy_002.csv  energy_003.csv  energy_006.csv  energy_018.csv  energy_025.csv  energy_030.csv  energy_031.csv  energy_037.csv  energy_038.csv  energy_041.csv  energy_046.csv  energy_048.csv  energy_049.csv  energy_050.csv  energy_066.csv  energy_069.csv  energy_076.csv  energy_082.csv  energy_083.csv  energy_086.csv  energy_090.csv  energy_093.csv  energy_095.csv  energy_097.csv
DoseCUDA/lookuptables/photons/ElektaVersaSibAxesse/: energy_labels.csv  machine_geometry.csv  machine_parameters.csv  mlc_geometry.csv
DoseCUDA/lookuptables/photons/ElektaVersaSibAxesse/10MV/: kernel.csv
DoseCUDA/lookuptables/photons/ElektaVersaSibAxesse/6MV/: beam_parameters.csv
DoseCUDA/lookuptables/photons/VarianTrueBeamHF/: HU_Density.csv  energy_labels.csv  kernel.csv  machine_geometry.csv  machine_parameters.csv  mlc_geometry.csv
DoseCUDA/lookuptables/photons/VarianTrueBeamHF/6MV/: beam_parameters.csv
DoseCUDA/lookuptables/protons/HitachiProbeatJHU/: HU_RLSP.csv  energies.csv  energy_008.csv  energy_009.csv  energy_013.csv  energy_015.csv  energy_016.csv  energy_020.csv  energy_023.csv  energy_026.csv  energy_032.csv  energy_033.csv  energy_034.csv  energy_035.csv  energy_036.csv  energy_043.csv  energy_054.csv  energy_055.csv  energy_058.csv  energy_062.csv  energy_068.csv  energy_072.csv  energy_081.csv  energy_085.csv  energy_088.csv  energy_089.csv  energy_094.csv  energy_096.csv  machine_geometry.csv  rangeshifter_labels.csv
DoseCUDA/lookuptables/protons/HitachiProbeatJHU/RS0/: energy_001.csv  energy_005.csv  energy_010.csv  energy_012.csv  energy_017.csv  energy_019.csv  energy_021.csv  energy_022.csv  energy_024.csv  energy_029.csv  energy_039.csv  energy_040.csv  energy_045.csv  energy_057.csv  energy_061.csv  energy_064.csv  energy_067.csv  energy_070.csv  energy_071.csv  energy_073.csv  energy_074.csv  energy_075.csv  energy_077.csv  energy_078.csv  energy_080.csv  energy_084.csv  energy_091.csv  energy_092.csv
DoseCUDA/lookuptables/protons/HitachiProbeatJHU/RS4/: energies.csv  energy_000.csv  energy_001.csv  energy_002.csv  energy_003.csv  energy_004.csv  energy_005.csv  energy_006.csv  energy_007.csv  energy_008.csv  energy_009.csv  energy_010.csv  energy_011.csv  energy_012.csv  energy_013.csv  energy_014.csv  energy_015.csv  energy_016.csv  energy_017.csv  energy_018.csv  energy_019.csv  energy_020.csv  energy_021.csv  energy_022.csv  energy_023.csv  energy_024.csv  energy_025.csv  energy_026.csv  energy_027.csv  energy_028.csv  energy_029.csv  energy_030.csv  energy_031.csv  energy_032.csv  energy_033.csv  energy_034.csv  energy_035.csv  energy_036.csv  energy_037.csv  energy_038.csv  (+59 more)
beam_modeling/: README.md  impt_compute_spots.py  impt_lookup_tables.py
dose_kernels/: BaseClasses.cpp  BaseClasses.h  CMakeLists.txt  CudaClasses.cu  CudaClasses.cuh  IMPTClasses.cu  IMPTClasses.cuh  dosemodule.cpp  dosemodule.h  model_params.h
tests/: create_dose.py  test_phantom_impt.py  test_phantom_imrt.py
